--- a/buoi3_js/js1.html
+++ b/buoi3_js/js1.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta charset="utf-8">
     <title>Hoc JS</title>
     <script>
         var txt1='Day la mot bien js';
@@ -38,6 +39,7 @@
 </head>
 <body>
     <h1>Hoc js</h1>
+	<p>Hôm nay là thứ 7</p>
     <script>
         document.write('<h2>'+arr1[2]+'<h2>');
         
